fix: removing border on download btn on mobile

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -55,7 +55,7 @@
     }
 
     .download-resume-btn {
-        @apply acc-anim fixed z-[100] w-10 h-10 md:w-14 md:h-14 xl:w-[4.5rem] xl:h-[4.5rem] bottom-0 right-0 m-6 md:m-8 xl:m-16 flex items-center justify-center rounded-full bg-light-btn-p dark:bg-dark-btn-p hover:ring-2 ring-accent-p shadow-[0_0_16px_0px_rgba(0,0,0,0.13)]
+        @apply acc-anim fixed z-[100] w-10 h-10 md:w-14 md:h-14 xl:w-[4.5rem] xl:h-[4.5rem] bottom-0 right-0 m-6 md:m-8 xl:m-16 flex items-center justify-center rounded-full bg-light-btn-p dark:bg-dark-btn-p hover:border-2 border-accent-p shadow-[0_0_16px_0px_rgba(0,0,0,0.13)] dark:shadow-[0_0_36px_-3px_rgb(0,0,0)]
     }
 
     .no-scrollbar::-webkit-scrollbar {
